Do not use K_GLOBAL_STATIC for a QObject-based class.

This fixes two things:
1. One should never create global static QObjects
2. global static creation is not thread-safe for complex classes.

BUG: 275880